MDEV-10274 Bundling insert with create statement for table with unsigned Decimal primary key issues warning 1194.

Flags are important for key_length calculations, so them should
        be set before it, not after.